--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </nav>
     <main class="main">
         <section class="section" id="rekordy-transferowe">
-            <button class="js-button">Dodaj tabelę do strony</button>
+            <button class="js-button"><span class="actionName">Usuń</span> tabelę</button>
             <div class="section__container">
-                <table class="table js-table table--hidden">
+                <table class="table js-table">
                     <caption class="table__caption">5 najdroższych transferów w piłce nożnej</caption>
                     <tr class="table__row">
                         <th scope="col" class="table__cell--header">Piłkarz</th>
